compiler/testData/cli/jvm/werrorWithExplicitError.out
compiler/testData/cli/jvm/werrorWithExplicitError.kt:4:6: error: only safe (?.) or non-null asserted (!!.) calls are allowed on a nullable receiver of type String?
    t.length
     ^
COMPILATION_ERROR
