compiler/testData/cli/jvm/werrorWithExplicitError.kt
fun foo(s: String, t: String?) {
    s!!
    t?.toString()
    t.length
}
